# Ted

./: .gitignore  Makefile  README  README.md  apt-get-prerequisites.sh  arch-pacman-prerequisites.sh  cppcheck.sh  dnf-prerequisites.sh  netbsd-prerequisites.sh  openbsd-prerequisites.sh  opensolaris-prerequisites.sh  ted-2.22-1.spec  ted-2.23h-1.spec  ted-2.23nx-1.spec  vms_files.tar  yum-prerequisites.sh  zypper-prerequisites.sh
Ted/: aclocal.m4  confdefs.h  configure  configure.in  docBorderProperties.c  docBorderProperties.h  docBuf.c  docBuf.h  docCellProperties.c  docChftnField.c  docDebug.c  docDocpropField.c  docDocumentList.c  docDocumentList.h  docDocumentProperties.c  docDocumentProperties.h  docDraw.c  docDraw.h  docDrawExternalItem.c  docDrawUtil.c  docDrawingObject.c  docDrawingObject.h  docEdit.c  docEdit.h  docEditOperation.c  docEditTable.c  docEvalField.h  docExternalItem.h  docField.c  docField.h  docFieldAdm.c  docFieldEdit.c  docFieldGetSet.c  docFind.c  docFind.h  (+240 more)
configure/expat/: aclocal.m4  config.h.in  configure  configure.in  makefile.in
configure/xpm/: Makefile.in  config.h.in  configure  configure.in
textEncoding/: aclocal.m4  bidiAlgo.h  bidiAlgoExplicit.c  bidiAlgoExplicit.h  bidiAlgoImpl.c  bidiAlgoImpl.h  bidiAlgoImplicit.c  bidiAlgoImplicit.h  bidiDebug.c  bidiDebug.h  bidiLineAlgo.c  bidiNoDebug.h  bidiParaAlgo.c  bidiScanner.c  bidiScanner.h  bidiTraverseTree.c  bidiTree.c  bidiTree.h  bidiTreeBuilder.c  bidiTreeBuilder.h  bidiTreeBuilderImpl.h  configure  configure.in  jsonLoad.c  jsonParsePath.c  jsonPath.h  jsonPathByKey.c  jsonPathBySubscript.c  jsonPathCollect.c  jsonPathDeepScan.c  jsonPathFilter.c  jsonPathFind.c  jsonPathImpl.c  jsonPathImpl.h  jsonPathRegex.c  makefile.in  numbersAdditive.c  numbersAdditive.h  numbersBase26.c  numbersBase26.h  (+96 more)
utilGeo/: configure  configure.in  geo2DDouble.h  geo2DInteger.c  geo2DInteger.h  geo2DSphere.h  geo3DDouble.h  geo3DSphere.h  geoAffineTransform.h  geoAffineTransform2D.c  geoAffineTransform2DLine.c  geoAffineTransform3D.c  geoClusterSegments.h  geoDocumentPageSetup.c  geoDocumentPageSetup.h  geoLineFitter.c  geoQuadTree.c  geoRectangle.c  geoRectangle.h  geoRectangleOffsets.c  geoRectangleOffsets.h  geoString.c  geoUnit.c  makefile  makefile.in  utilGeoConfig.h  utilGeoConfig.h.in
(+1516 files in other folders)
