dnl Process this file with autoconf to produce a configure script.
AC_INIT(geoRectangle.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_BIGENDIAN
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(unsigned short)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(unsigned long)

dnl Checks for library functions.
AC_FUNC_MEMCMP

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_CONFIG_HEADER(utilGeoConfig.h)
AC_OUTPUT(makefile)
