dnl Process this file with autoconf to produce a configure script.
AC_INIT(xmlparse/xmlparse.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

AC_C_XML_BYTE_ORDER

AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(XML_BYTE_ORDER)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(makefile)
